# bzl-exec-log-parser

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  combine_files.sh  compile_proto.sh  generate_proto.sh  go.mod  go.sum  main.go
pkg/proto/spawn/: spawn.pb.go  spawn.pb.json.go
protos/spawn/: spawn.proto
src/: cli.rs  error.rs  lib.rs  main.rs
src/commands/: analyze.rs
src/proto/: mod.rs  tools.protos.rs
