[package]
name = "bzl-exec-log-parser"
version = "0.1.0"
edition = "2024"

[dependencies]

# Protobuf dependencies  
prost = "0.9"
prost-types = { version = "0.9", features = ["serde"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

[build-dependencies]
prost-build = "0.11"
serde = { version = "1.0", features = ["derive"] }
