[package]
name = "bzl-exec-log-parser"
version = "0.2.0"
edition = "2021"

# This section makes src/lib.rs the library root
[lib]
name = "bzl_exec_log_parser"
path = "src/lib.rs"

# This section makes src/main.rs the binary root
[[bin]]
name = "bzl-exec-log-analyzer"
path = "src/main.rs"

[dependencies]

# Protobuf dependencies
prost = "0.12"
prost-types = "0.12"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Compression support for compact format
zstd = "0.13"

[build-dependencies]
prost-build = "0.12"
